# autoupdater

./: Cargo.toml
src/: lib.rs
src/apis/: mod.rs  static_files.rs
src/tests/: static_files.rs
